<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/text_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Title"
        android:layout_gravity="center"
        android:textSize="32sp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textFontWeight="@integer/material_motion_duration_medium_2"
        android:layout_margin="16dp"
        />

    <EditText
        android:id="@+id/edit_Distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_Distance"
        android:textSize="18sp"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/text_Total_Km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Total_Km"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="18dp"
        />
    <EditText
        android:id="@+id/edit_Price_per_Liter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_Price_per_Liter"
        android:textSize="18sp"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/text_Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Price"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="18dp"
        />
    <EditText
        android:id="@+id/edit_Autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_Autonomy"
        android:textSize="18sp"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/text_Km_per_Liter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Km_per_Liter"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="18dp"
        />
    <TextView
        android:id="@+id/text_Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Total"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/text_Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Result"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textColor="@color/blue"
        android:layout_marginVertical="20dp"
        />

    <Button
        android:id="@+id/btn_Calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="128dp"
        android:backgroundTint="@color/green"
        android:padding="16dp"
        android:text="@string/btn_Calc"
        android:textAllCaps="true"
        android:textSize="20sp" />

</LinearLayout>